manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/([^/]+)/?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: health-service
              port:
                number: 8000
